[project]
name = "lung-disease-calssifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.workspace]
members = [
    "LLAMA 4 RAG",
]
